--- a/public/css/category.css
+++ b/public/css/category.css
@@ -206,6 +206,7 @@ ul li {
 
 
 #submenu {
+    display : none;
     border: 1px solid #d9d9d9;
     border-radius: 10px;
     background-color: #fafafa;
@@ -288,4 +289,10 @@ span {
     /* 인라인 요소로 표시 */
     white-space: nowrap;
     /* 텍스트가 한 줄로 유지되도록 설정 */
+}
+
+.sample-image img{
+    width: 100%;
+    height: 100%;
+    border-radius : 10px;
 }
