--- a/app/src/public/css/global.css
+++ b/app/src/public/css/global.css
@@ -1,47 +1,316 @@
-body {
+@media screen and (max-width:1022px) {
+  .logo {
+    width: auto;
+    height: 40px;
+    position: fixed;
+    left: 50%;
+    top: 10px;
+    transform: translateX(-50%);
+  }
+
+  .menu-container {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    max-width: 988px;
+    left: 0;
+    right: 0;
+    background-color: white;
+    padding-top: 58px;
+    padding-bottom: 5px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 9998
+  }
+
+  #login {
+    position: fixed;
+    top: 20px;
+    right: 0;
+    font-size: 14px;
+  }
+
+  .login-button {
+    padding: 5px 10px;
+    background-color: white;
+    font-size: 14px;
+    color: black;
+    border: none;
+    cursor: pointer;
+    border-radius: 2px;
+  }
+
+  #logout {
+    position:fixed;
+    top:20px;
+    right:10px;
+    font-size: 14px;
+  }
+
+  #logout button {
+    padding: 5px 10px;
+    background-color: white;
+    font-size: 14px;
+    color: black;
+    border: none;
+    cursor: pointer;
+    border-radius: 2px;
+  }
+
+  #logout-button{
+    display:none;
+  }
+
+  .signup-button {
+    padding: 5px 10px;
+  }
+
+  .popup-content {
+    max-width: 368px;
+    width: 80%;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
+
+  .search-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 95%;
+    height: 38px;
+    margin-top: 15px;
+    background-color: #d9d9d9;
+    border-radius: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+
+  /*navbar css*/
+  .navbar_overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 998;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.1s ease;
+    z-index: 9998;
+  }
+
+  .navbar_burger {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    cursor: pointer;
+    color: #000;
+    z-index: 9998;
+  }
+
+  .navbar_burger_back {
+    position: fixed;
+    top: 1.5rem;
+    left: 1.5rem;
+    cursor: pointer;
+    color: black;
+  }
+
+  .navbar_menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 80%;
+    height: 100%;
+    background-color: white;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    transform: translateX(-100%);
+    z-index: 9999;
+    color: black;
+    transition: transform 0.3s ease;
+  }
+
+  .navbar_menu a {
+    position: relative;
+    color: black;
+    font-size: 16px;
+    padding: 12px 25px;
+    text-decoration: none;
+  }
+
+  .navbar_menu.active {
+    transform: translateX(0);
+  }
+
+  .navbar_overlay.active {
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  .category-container-mobile {
+    display: none;
+  }
+
+  .category-container-mobile.active {
+    display: flex;
+    flex-direction: column;
+    background-color: #ededed;
+    border-top: 1px solid #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
+    width: 100%;
+  }
+
+  .navbar_menu hr {
+    border: 1px solid #d9d9d9;
+    width: 99%;
+    margin-top: 30%;
+  }
+
+  .big-category {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .big-category button {
+    font-size: 16px;
+    background-color: #00000000;
+    border: none;
+    padding: 5px 25px;
+    width: 100%;
+    text-align: left;
+  }
+
+  .big-category svg {
+    margin-right: 10px
+  }
+
+  .category-button {
+    align-items: center;
+    font-size: 14px;
+    background-color: #00000000;
+    border: none;
+    text-align: left;
+    padding: 7.5px;
+    margin-left: 29px;
+    color: #5c5c5c;
+  }
+
+
+}
+
+/*데스크탑 css*/
+
+@media screen and (min-width : 1023px) {
+  .logo {
+    width: auto;
+    height: 62px;
+  }
+
+  .menu-container {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    max-width: 988px;
+    left: 0;
+    right: 0;
+    background-color: white;
+    padding-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 9998
+  }
+
+  #login {
+    font-size: 14px;
+  }
+
+  .login-button {
+    padding: 5px 10px;
+    background-color: white;
+    font-size: 14px;
+    color: black;
+    border: none;
+    cursor: pointer;
+    border-radius: 2px;
+    margin-right: 30px;
+  }
+
+  #logout {
+    font-size: 14px;
+  }
+
+  #logout button {
+    padding: 5px 10px;
+    background-color: white;
+    font-size: 14px;
+    color: black;
+    border: none;
+    cursor: pointer;
+    border-radius: 2px;
+    margin-right:30px;
+  }
+
+  .popup-content {
+    width: 328px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
+
+  .search-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 60%;
+    height: 38px;
+    background-color: #d9d9d9;
+    border-radius: 10px;
+  }
+
+  .navbar_menu {
+    display: none;
+  }
+
+  .navbar_burger {
+    display: none;
+  }
+
+}
+
+
+
+
+body { 
   padding-top: 100px;
   max-width: 988px;
-  
-  margin-right : auto;
-  margin-left : auto;
-
-  
+  margin-right: auto;
+  margin-left: auto;
   font-family: 'Inter';
   font-style: normal;
 }
 
-.menu-container {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  max-width: 988px;
-  left: 0;
-  right: 0;
-  background-color: white;
-  padding-top: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 50px;
-  margin-left : auto;
-  margin-right: auto;
-  z-index: 9999
-}
 
-.logo {
-  width: 100px;
-  height: 50px;
-}
 
-.search-container {
-  position: relative;
-  display:flex;
-  align-items:center;
-  width: 60%;
-  height: 38px;
-  background-color: #d9d9d9;
-  border-radius: 10px;
-}
+
+
+
 
 .search-input {
   flex: 1;
@@ -50,11 +319,11 @@ body {
   border-color: #00000000;
   font-size: 14px;
   height: 80%;
-  text-align: center;
-  padding-left:40px;
+  text-align: left;
+  margin: 0 10px;
 }
 
-.search-input::placeholder{
+.search-input::placeholder {
   color: black;
 }
 
@@ -69,37 +338,11 @@ body {
   border: none;
   margin-left: 5px;
   cursor: pointer;
-  width:40px;
+  width: 40px;
   height: 40px;
 }
 
-#login{
-  font-size: 14px;
-}
 
-.login-button {
-  padding: 5px 10px;
-  background-color: white;
-  font-size: 14px;
-  color: black;
-  border: none;
-  cursor: pointer;
-  border-radius: 2px;
-  margin-right: 30px;
-}
-
-#logout{
-  font-size : 14px;
-}
-#logout button {
-  padding: 5px 10px;
-  background-color: white;
-  font-size: 14px;
-  color: black;
-  border: none;
-  cursor: pointer;
-  border-radius: 2px;
-}
 
 
 a {
@@ -120,14 +363,6 @@ a {
   visibility: hidden;
   opacity: 0;
   transition: visibility 0s, opacity 0.3s ease;
-}
-
-.popup-content {
-  width: 328px;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .popup-content h2 {
