--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -10,13 +10,13 @@
 
 <body>
     <div class="title-container">
-        <a href="home.html"><img src="img/logo.jpg" alt="Logo" class="logo"></a>
+        <a href="/home"><img src="img/logo.jpg" alt="Logo" class="logo"></a>
 
     </div>
     <div class="sign-up-container">
 
         <h3 class="sign-up">회원가입</h3>
-        <form action="home.html" class=input-container id="signup-form">
+        <form action="/home" class=input-container id="signup-form">
             <h3>이름</h3>
             <input id="name" type="text" name="name" placeholder="이름(실명)을 입력해주세요" class="input-box">
             <h3>이메일</h3>
