--- a/app/src/public/css/detail.css
+++ b/app/src/public/css/detail.css
@@ -1,207 +1,464 @@
-.detail-container{
-    width: 100%;
-    display: flex;
-    flex-direction:row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: stretch;
-    max-width: 1300px;
-    margin: auto;
-    border: 0px;
+@media screen and (min-width:1023px) {
+    h3 {
+        font-size: 18px;
+        margin: 15px 0;
+    }
+
+    h4,
+    h5 {
+        font-size: 14px;
+    }
+
+    h5 {
+        margin-bottom: 22px;
+    }
+
+    .explain-text-mobile {
+        display: none;
+    }
+
+    .review-container-mobile {
+        display: none;
+    }
+
+    .detail-container {
+        width: 100%;
+        height: 650px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: center;
+        align-items: stretch;
+        max-width: 1500px;
+        margin: auto;
+        margin-top: 44px;
+        border: 0px;
+    }
+
+    .catalog-button {
+        margin-top: 20px;
+        margin-left: 57px;
+        width: 80px;
+        height: 40px;
+        border: #bab9b9e9 solid 2px;
+        background-color: #bab9b9e9;
+    }
+
+    .explain-container {
+        width: 80%;
+        margin-right: 20px;
+        max-width: 1500px;
+        border: 0px;
+    }
+
+    .explain-content content {
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
+
+    .title {
+        font-size: 18pt;
+        font-weight: bold;
+        margin-bottom: 20px;
+        text-align: center;
+        margin: auto;
+    }
+
+    .profile-container {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        border: 0px;
+    }
+
+    .person-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: center;
+        border: 0px;
+    }
+
+    .person-container ul {
+        color: black;
+        list-style-type: square;
+    }
+
+    .person-container ul li {
+        margin-bottom: 14px;
+        text-align: left;
+    }
+
+
+    .person-img {
+        background-color: gray;
+        width: 200px;
+        height: 154px;
+        border-radius: 10px;
+    }
+
+    .review-container {
+        text-align: center;
+        margin-top: 10px;
+        border: 0px;
+        width: 100%;
+        border: solid 1px #5c5c5c;
+        border-radius: 10px;
+    }
+
+    .review-container button {
+        border: 0px;
+        font-size: 12pt;
+        width: 100%;
+        height: 50px;
+
+    }
+
+    .banner {
+        position: relative;
+        height: 315px;
+        overflow: hidden;
+
+        display: flex;
+        user-select: none;
+        flex-wrap: nowrap;
+        max-width: 800px;
+        max-height: 350px;
+        border: 0px;
+        border-radius: 10px;
+    }
+
+    .banner-item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        position: relative;
+        left: 0px;
+
+        width: 100%;
+        height: 100%;
+        flex-shrink: 0;
+        transition: left 0.15s;
+    }
+
+    .banner-button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: calc(50% - 20px);
+        color: white;
+        width: 34px;
+        height: 34px;
+        border-radius: 100%;
+        background-color: #00000046;
+        cursor: pointer;
+    }
+
+    .banner-prev-button {
+        left: 11px;
+    }
+
+    .banner-next-button {
+        right: 11px;
+    }
+
+    .banner-item.item1 {
+        background-color: gray;
+    }
+
+    .banner-item.item2 {
+        background-color: gray;
+    }
+
+    .banner-item.item3 {
+        background-color: gray;
+    }
+
+    .banner-item.item4 {
+        background-color: gray;
+    }
+
+    .banner-item.item5 {
+        background-color: gray;
+    }
+
+
+    .banner-pagination {
+        display: flex;
+        gap: 5px;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    .banner-pagination>li {
+        color: #7fb5ff88;
+        cursor: pointer;
+        font-size: 25px;
+    }
+
+    .banner-pagination>li.active {
+        color: #7fb5ff;
+    }
+
+    .banner-item-duplicate {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        left: 0px;
+        width: 100%;
+        height: 300px;
+        flex-shrink: 0;
+        transition: left 0.15s;
+    }
+
+    .explain-title title {
+        font-size: 15pt;
+        text-align: left;
+    }
+
+    .explain-text {
+        font-size: 12pt;
+        text-align: left;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        border: 0px;
+        border-radius: 2px;
+    }
+
+    .person-content content {
+        width: 230px;
+        border-radius: 10px;
+        margin: 20px
+    }
 }
 
-.explain-container{
-    width: 67%;
-    margin-right: 20px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;
-    max-width: 1100px;
-    border: 0px;
+
+
+
+@media screen and (max-width:1022px) {
+    .explain-container {
+        width: 100%;
+        height: 211px;
+    }
+
+    .banner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        display: flex;
+        user-select: none;
+        flex-wrap: nowrap;
+        border: 0px;
+        border-radius: 10px;
+    }
+
+    .banner-item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        position: relative;
+        left: 0px;
+
+        width: 100%;
+        height: 100%;
+        flex-shrink: 0;
+        transition: left 0.15s;
+    }
+
+    .banner-button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: calc(50% - 20px);
+        color: white;
+        width: 34px;
+        height: 34px;
+        border-radius: 100%;
+        background-color: #00000046;
+        cursor: pointer;
+    }
+
+    .banner-prev-button {
+        left: 11px;
+    }
+
+    .banner-next-button {
+        right: 11px;
+    }
+
+    .banner-item.item1 {
+        background-color: gray;
+    }
+
+    .banner-item.item2 {
+        background-color: gray;
+    }
+
+    .banner-item.item3 {
+        background-color: gray;
+    }
+
+    .banner-item.item4 {
+        background-color: gray;
+    }
+
+    .banner-item.item5 {
+        background-color: gray;
+    }
+
+
+    .banner-pagination {
+        display: flex;
+        gap: 5px;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    .banner-pagination>li {
+        color: #7fb5ff88;
+        cursor: pointer;
+        font-size: 25px;
+    }
+
+    .banner-pagination>li.active {
+        color: #7fb5ff;
+    }
+
+    .banner-item-duplicate {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        left: 0px;
+        width: 100%;
+        height: 300px;
+        flex-shrink: 0;
+        transition: left 0.15s;
+    }
+
+    .person-img {
+        background-color: gray;
+        width: 67px;
+        height: 67px;
+        border: 0px;
+        border-radius: 10px;
+    }
+    
+    .detail-container {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        margin: auto;
+        margin-top : 44px;
+    }
+
+    .explain-text {
+        display: none;
+    }
+
+    .person-container {
+        width: 100%;
+        border: 0px;
+
+    }
+
+    .like-profile {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-end;
+        margin-top : 14px;
+    }
+
+    .review-container-mobile {
+        text-align: center;
+        position : relative;
+    }
+
+    .review-container-mobile button {
+        background-color: white;
+        border: 0px;
+        font-size: 14px;
+    }
+
+    h3 {
+        font-size : 16px;
+        margin-top : 14px;
+        margin-bottom : 16px;
+    }
+
+    h4{
+        font-size : 14px;
+        margin : 3px 0;
+    }
+    h5{
+        font-size : 14px;
+        margin-bottom : 14  px;
+    }
+
+    .history1 {
+        display: none;
+    }
+
+    .review-container {
+        display: none;
+    }
+
+    .person-content content {
+        margin-left: 100px;
+    }
+
+    .catalog-button {
+        margin-top: 20px;
+        width: 100%;
+        height: 40px;
+        border: #bab9b9e9 solid 2px;
+        background-color: #bab9b9e9;
+    }
+
+    .explain-text-mobile{
+        margin-top : 33px
+    }
+    .explain-text-mobile h2 {
+        font-size : 16px;
+        font-weight: bolder;
+    }
+
+    .explain-text-mobile p{
+        font-size : 14px;
+    }
+
+
+
 }
 
-.title {
-    font-size: 18pt;
-    font-weight: bold;
-    margin-bottom: 20px;    
-    text-align: center;
-    margin:auto;
-}
 
-.profile-container{
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    border: 0px;
-}
-
-.person-container{
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;    
-    max-width: 500px;
-    border: 0px solid #cccc;
-    border-radius : 0px;
-}
-
-.person-container ul {
-    color: black;
-    list-style-type: square;
-    padding-left: 20px; /* 리스트에서 마커를 보여줄 위치를 지정 */
-}
-
-.person-container ul li {
-    margin-bottom: 14px;
-}
-
-
-.person-img{
-    background-color: aqua;
-    width: 230px;
-    height: 154px;
+img {
     border-radius: 10px;
-    margin: 20px
 }
 
-.review-container{
-    margin-top:50px;
-    border : 0px;
+#submenu{   
+    display : none;
+}
+
+.banner-item img{
     width: 100%;
+    height: 100%;
 }
-
-.review-container button{
-    background-color: white;
-    border: 0px;
-    font-size: 12pt;
-    width: 100%;
-    height: 50px;
-
-}
-
-.banner {
-    position: relative;
-    width: 1000px;
-    height: 300px;
-    overflow: hidden;
-
-    display:flex;
-    user-select:none;
-    flex-wrap: nowrap;
-    margin: auto;
-    max-width: 800px;
-    max-height: 300px;
-    border: 0px;
-    border-radius: 10px;
-}
-
-.banner-item{
-    display:flex;
-    align-items: center;
-    justify-content: center;
-
-    position:relative;
-    left: 0px;
-
-    width:100%;
-    height:100%;
-    flex-shrink: 0;
-    transition: left 0.15s;
-}
-
-.banner-button{
-    display:flex;
-    justify-content:center;
-    align-items: center;
-    position: absolute;
-    top: calc(50% - 20px);
-    color: white;
-    width: 34px;
-    height: 34px;
-    border-radius: 100%;
-    background-color: #cccc;
-    cursor: pointer;
-}
-
-.banner-prev-button{
-    left: 11px;
-}
-
-.banner-next-button{
-    right: 11px;
-}
-
-.banner-item.item1{
-    background-color: darkgoldenrod;
-}
-
-.banner-item.item2{
-    background-color: aqua;
-}
-
-.banner-item.item3{
-    background-color: darkcyan;
-}
-
-.banner-item.item4{
-    background-color: darkmagenta;
-}
-
-.banner-item.item5{
-    background-color: darkslateblue;
-}
-
-
-.banner-pagination{
-    display: flex;
-    gap: 5px;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-.banner-pagination > li{
-    color: #7fb5ff88;
-    cursor: pointer;
-    font-size: 25px;
-}
-
-.banner-pagination > li.active{
-    color: #7fb5ff;
-}
-
-.banner-item-duplicate{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    left: 0px;
-    width: 100%;
-    height: 300px;
-    flex-shrink: 0;
-    transition: left 0.15s;
-}
-
-.explain-text{
-    font-size: 12pt;
-    text-align: left;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border: 0px;
-    border-radius: 2px;
-}
-.explain-title title{
-    text-align: left;
-}
-.person-content content{
-    width: 230px;
-    border-radius: 10px;
-    margin: 20px
-} 
