--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -10,8 +10,8 @@
 
 <body>
     <div class="menu-container"> <!-- 메뉴바 -->
-        <a href="home.html"><img src="img/logo.jpg" alt="Logo" class="logo"></a>
-        <form action="category.html" class="search-container">
+        <a href="/login"><img src="img/logo.jpg" alt="Logo" class="logo"></a>
+        <form action="/category" class="search-container">
             <button class="search-button">
                 <img src="img/search.png" alt="search-img" class="search-img">
             </button>
@@ -19,7 +19,7 @@
         </form>
         <div id=login>
             <button onclick="openPopup()" class="login-button">로그인</button>
-            <a href="signup.html" class="signup-button">회원가입</a>
+            <a href="/register" class="signup-button">회원가입</a>
         </div>
         <div id="popup" class="popup-overlay">
             <div class="popup-content">
@@ -28,14 +28,13 @@
                 <form action="login" id="loginForm">
                     <input id="id" type="text" name="id" placeholder="아이디">
                     <input id="password" type="password" name="pw" placeholder="비밀번호">
-                    <p id="btn_login">로그인</p>
-                    <!-- <input id="btn_login" type="submit" value="로그인"> -->
+                    <input id="btn_login" type="submit" value="로그인">
                 </form>
             </div>
         </div>
         <div id=logout>
             <button id="logout-button" onclick="logout()">로그아웃</button>
-            <a href="mypage.html">마이페이지</a>
+            <a href="/mypage">마이페이지</a>
         </div>
     </div>
 
@@ -123,62 +122,62 @@
                 <div class="content">
                     <img src="img/car.jpg" width=100% height=100% alt="content-img">
                     <div class="content-text">
-                        <a href="detail.html">자동차 정비 | 기본 검사 </a> <!--대분류 | 소분류-->
+                        <a href="/detail">자동차 정비 | 기본 검사 </a> <!--대분류 | 소분류-->
                     </div>
                 </div>
                 <div class="content">
                     <img src="img/ant.jpg" width=100% height=100% alt="content-img">
                     <div class="content-text">
-                        <a href="detail.html">방역 | 개미 </a>
+                        <a href="/detail">방역 | 개미 </a>
                     </div>
                 </div>
                 <!-- 이하 br 태그 지울것 -->
                 <div class="content">
                     <img src="img/psy.jpg" width=100% height=100% alt="content-img">
                     <div class="content-text">
-                        <a href="detail.html"> <br> 취미 레슨 | 보컬 </a>
+                        <a href="/detail"> <br> 취미 레슨 | 보컬 </a>
                     </div>
                 </div>
                 <div class="content">
                     <img src="img/son.jpg" width=100% height=100% alt="content-img">
                     <div class="content-text">
-                        <a href="detail.html"> <br> 스포츠 용역 | 축구 </a>
+                        <a href="/detail"> <br> 스포츠 용역 | 축구 </a>
                     </div>
                 </div>
                 <div class="content">
                     <img src="img/car.jpg" width=100% height=100% alt="content-img">
                     <div class="content-text">
-                        <a href="detail.html"> <br> 자동차 정비 | 타이어 교체 </a>
+                        <a href="/detail"> <br> 자동차 정비 | 타이어 교체 </a>
                     </div>
                 </div>
                 <div class="content">
                     <img src="img/dog.jpg" width=100% height=100% alt="content-img">
                     <div class="content-text">
-                        <a href="detail.html"> <br> 돌보미 | 탁견 </a>
+                        <a href="/detail"> <br> 돌보미 | 탁견 </a>
                     </div>
                 </div>
                 <div class="content">
                     <img src="img/jewely.jpg" width=100% height=100% alt="content-img">
                     <div class="content-text">
-                        <a href="detail.html"> <br> 제작 의뢰 | 보석 </a>
+                        <a href="/detail"> <br> 제작 의뢰 | 보석 </a>
                     </div>
                 </div>
                 <div class="content">
                     <img src="img/house.jpg" width=100% height=100% alt="content-img">
                     <div class="content-text">
-                        <a href="detail.html"> <br> 인테리어 | 견적 상담 </a>
+                        <a href="/detail"> <br> 인테리어 | 견적 상담 </a>
                     </div>
                 </div>
                 <div class="content">
                     <img src="img/house.jpg" width=100% height=100% alt="content-img">
                     <div class="content-text">
-                        <a href="detail.html"> <br> 인테리어 | 도배 </a>
+                        <a href="/detail"> <br> 인테리어 | 도배 </a>
                     </div>
                 </div>
                 <div class="content">
                     <img src="img/aircon.jpg" width=100% height=100% alt="content-img">
                     <div class="content-text">
-                        <a href="detail.html"> <br> 청소 | 에어컨 </a>
+                        <a href="/detail"> <br> 청소 | 에어컨 </a>
                     </div>
                 </div>
                 <!--샘플 끝-->
@@ -231,9 +230,9 @@
             </button>
         </div>
 
-        <a href="home.html">공지사항</a>
-        <a href="home.html">FAQ</a>
-        <a href="home.html">이벤트</a>
+        <a href="/home">공지사항</a>
+        <a href="/home">FAQ</a>
+        <a href="/home">이벤트</a>
         <div class="navbar_burger_back">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x-lg"
                 viewBox="0 0 16 16">
