--- a/app/src/views/home/mypage.ejs
+++ b/app/src/views/home/mypage.ejs
@@ -192,7 +192,6 @@
 
             </div>
         </div>
-        <script src="js/mypage.js"></script>
-
-        <script src="js/global.js"></script>
+        <script src="/js/home/mypage.js"></script>
+        <!-- <script src="/js/home/global.js"></script> -->
 </body>
