사용자 정보 조회 & 수정 기능 구현

--- a/app/src/views/home/mypage.ejs
+++ b/app/src/views/home/mypage.ejs
@@ -129,7 +129,7 @@
                                 <option value="Jeju">제주</option>
                             </select>
 
-                            <input type="submit" value="수정하기">
+                            <input id="btn_updateUser" type="submit" value="수정하기">
                         </div>
                     </div>
                 </form>
