게시글 다시 해보자

--- a/app/src/views/home/mypage.ejs
+++ b/app/src/views/home/mypage.ejs
@@ -10,7 +10,7 @@
 
 <body>
     <div class="menu-container"> <!-- 메뉴바 -->
-        <a href="/home"><img src="img/logo.jpg" alt="Logo" class="logo"></a>
+        <a href="/login"><img src="img/logo.jpg" alt="Logo" class="logo"></a>
         <div id=logout>
             <button class="addPost" onclick="postAdd()">새 게시글 등록</button>
         </div>
@@ -180,9 +180,9 @@
                 </button>
             </div>
 
-            <a href="/home">공지사항</a>
-            <a href="/home">FAQ</a>
-            <a href="/home">이벤트</a>
+            <a href="/login">공지사항</a>
+            <a href="/login">FAQ</a>
+            <a href="/login">이벤트</a>
             <div class="navbar_burger_back">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x-lg"
                     viewBox="0 0 16 16">
